Add support for automated, secure connections via MDD's CMux (see r854) Improve the HttpFetcher class, use it everywhere, simplify HTTP fetching and make it faster Move some classes around (touches a bunch of files, should have been in a separate commit) Fixes issue 72